...
                            _textPageController.animateToPage(
                              onboardingData.length - 1,
                              duration: const Duration(milliseconds: 400),
                              curve: Curves.easeInOut,
                            );
                          },
                          text: "Lewati",
                          buttonType: ButtonType.outlined,
                          borderColor: Colors.transparent,
                        )
                      : const SizedBox(height: 50),
                ],
              ),
...
